--- a/config/locales/uk.json
+++ b/config/locales/uk.json
@@ -1,18 +1,19 @@
 {
-  "memory.stored": "Пам'ять збережена (id: {0}).",
-  "memory.duplicate": "Така пам'ять вже існує (дублікат).",
-  "memory.forgotten": "Пам'ять {0} забута.",
-  "memory.none": "Ніяких спогадів про цього користувача не збережено.",
-  "image.not_configured": "Генерація зображень не налаштована. Встановіть NANO_BANANA_API_KEY та NANO_BANANA_API_URL.",
-  "image.disabled": "Генерація зображень наразі вимкнена.",
-  "sandbox.disabled": "Виконання коду наразі вимкнено.",
-  "sandbox.timeout": "Виконання коду перевищило ліміт часу.",
-  "sandbox.no_output": "(немає виводу)",
-  "sandbox.output_truncated": "... (вивід обрізано)",
-  "sandbox.error": "Помилка виконання:\n{0}",
-  "weather.pending": "Погода для {0}: інтеграція в процесі.",
-  "currency.pending": "Конвертація {0} {1} → {2}: інтеграція в процесі.",
-  "tool.unknown": "Невідомий інструмент: {0}",
-  "tool.internal_error": "Внутрішня помилка в інструменті {0}",
-  "error.backend_stub": "Бекенд-заглушка: повідомлення отримано."
+    "memory.stored": "Пам'ять збережена (id: {0}).",
+    "memory.duplicate": "Така пам'ять вже існує (дублікат).",
+    "memory.forgotten": "Пам'ять {0} забута.",
+    "memory.none": "Ніяких спогадів про цього користувача не збережено.",
+    "image.not_configured": "Генерація зображень не налаштована. Встановіть NANO_BANANA_API_KEY та NANO_BANANA_API_URL.",
+    "image.disabled": "Генерація зображень наразі вимкнена.",
+    "sandbox.disabled": "Виконання коду наразі вимкнено.",
+    "sandbox.timeout": "Виконання коду перевищило ліміт часу.",
+    "sandbox.no_output": "(немає виводу)",
+    "sandbox.output_truncated": "... (вивід обрізано)",
+    "sandbox.error": "Помилка виконання:\n{0}",
+    "weather.pending": "Погода для {0}: інтеграція в процесі.",
+    "currency.pending": "Конвертація {0} {1} → {2}: інтеграція в процесі.",
+    "tool.unknown": "Невідомий інструмент: {0}",
+    "tool.internal_error": "Внутрішня помилка в інструменті {0}",
+    "search.no_results": "Нічого не знайдено.",
+    "error.backend_stub": "Бекенд-заглушка: повідомлення отримано."
 }
